tests/fiaas_deploy_daemon/e2e_expected/strongbox-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "false"
  labels:
    app: v3-data-examples-strongbox
    fiaas/deployed_by: ""
    fiaas/deployment_id: DEPLOYMENT_ID
    fiaas/version: VERSION
  name: v3-data-examples-strongbox
  namespace: default
  ownerReferences: []
spec:
  tls: []
  rules:
  - host: v3-data-examples-strongbox.svc.test.example.com
    http:
      paths:
      - backend:
          serviceName: v3-data-examples-strongbox
          servicePort: '80'
        path: /
